--- a/backApp/src/app/civil/civil.page.html
+++ b/backApp/src/app/civil/civil.page.html
@@ -7,11 +7,10 @@
 <ion-content [fullscreen]="true">
 
   <ion-card>
-    <img src="../../assets/img-sistemas/{{image}}">
+    <img src="../../assets/img-civil/{{image}}">
     <h1 class="card-title">Horario de Atencion: {{horario}}</h1>
     <h1 class="card-title">Ubicacion: {{ubicacion}}</h1>
     <h1 class="card-title">Contacto: {{contacto}}</h1>
   </ion-card>
 
 </ion-content>
-
