--- a/backApp/src/app/ofi-ambientes/ofi-ambientes.page.html
+++ b/backApp/src/app/ofi-ambientes/ofi-ambientes.page.html
@@ -1,13 +1,17 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>ofi-ambientes</ion-title>
+    <ion-title>Ambientes de las Oficinas Administrativas</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">ofi-ambientes</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <br>
+<button [routerLink]="['/directorio']" class="btn btn-danger">Regresar</button>
+  <div id="container">
+    <ion-row>
+      <ion-col sizeXs="12" *ngFor="let item of ambientesofi" >
+          <button [routerLink]="['/oficinas',item.id]" class="btn">{{item.name}}</button>
+      </ion-col>
+    </ion-row>
+  </div>
 </ion-content>
