--- a/backApp/src/app/aulas/aulas.page.html
+++ b/backApp/src/app/aulas/aulas.page.html
@@ -1,13 +1,16 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>aulas</ion-title>
+    <ion-title>Aulas de la FIA</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">aulas</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-row>
+    <ion-col sizeXs="12" *ngFor="let item of aulas">
+      <ion-card>
+        <img src="../../assets/img-aulas/{{item.image}}">
+        <h1 class="card-title">{{item.name}}</h1>
+      </ion-card>
+    </ion-col>
+  </ion-row>
 </ion-content>
